[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/Health.tscn" type="PackedScene" id=1]
[ext_resource path="res://font/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gui/gui.gd" type="Script" id=8]
[ext_resource path="res://gui/dialog.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="Gui" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 8 )

[node name="Player1" parent="." instance=ExtResource( 1 )]

[node name="Player2" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_right = -54.0
fill_mode = 1

[node name="DialogBox" type="NinePatchRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
texture = ExtResource( 9 )
patch_margin_left = 233
patch_margin_top = 20
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Label" parent="DialogBox"]
anchor_left = 0.025
anchor_top = 0.25
anchor_right = 0.975
anchor_bottom = 0.844
margin_right = -24.0
margin_bottom = -1.272
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hello!"
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}
